# sc-rollup

./: .gitignore  PolkadotForum-Post1  README.md
examples/guess-the-number/: README.md
examples/guess-the-number/ink-v6-contract/: Cargo.toml  README.md  lib.rs
examples/guess-the-number/ink-v6-contract/artifacts/: guess_the_number.contract  guess_the_number.json  guess_the_number.polkavm
examples/guess-the-number/ink-v6-contracts/artifacts/: erc721.contract  erc721.polkavm  guess_the_number.contract  guess_the_number.polkavm
examples/guess-the-number/ink-v6-contracts/erc21/: Cargo.toml  README.md  lib.rs
examples/guess-the-number/ink-v6-contracts/game/: Cargo.toml  lib.rs
examples/guess-the-number/worker-phala-cloud/: README.md  docker-compose.yml  env.example  env.localnode  env.pah  env.wah  package.json
examples/guess-the-number/worker-phala-cloud/src/: guess-the-number.ts  index.ts  indexer.ts
examples/price-feed-oracle/: README.md
examples/price-feed-oracle/ink-v5/contracts/price_feed_consumer/: Cargo.toml  lib.rs
examples/price-feed-oracle/ink-v5/phala-cloud/: env.example  package.json
examples/price-feed-oracle/ink-v5/worker-phala-cloud/: README.md  docker-compose.yml  env.example  package.json
examples/price-feed-oracle/ink-v6/contracts/: README.md  lib.rs
examples/price-feed-oracle/price_feed_consumer/ink-v5/: README.md
examples/price-feed-oracle/price_feed_consumer/ink-v6/: Cargo.toml  README.md  lib.rs
examples/price-feed-oracle/price_feed_consumer/ink-v6/artifacts/: price_feed_consumer.contract  price_feed_consumer.json  price_feed_consumer.polkavm
examples/price-feed-oracle/worker-phala-cloud/: README.md  docker-compose.yml  env.example  package.json
examples/price-feed-oracle/worker-phala-cloud/src/: index.ts  price-feed-oracle.ts  types.ts
phala-cloud/: README.md  docker-compose.yml  index.ts  package.json
phala-cloud-bun/: README.md  docker-compose.yml  env.example  index.ts  package.json
phala-cloud-bun/.papi/: polkadot-api.json
phala-cloud-bun/.papi/descriptors/: package.json
phala-cloud-nextjs/: package.json
phala-cloud-nextjs/src/app/: page.tsx
sc-rollup-api/: README.md  package.json  pnpm-workspace.yaml  rollup.config.js  tsconfig-base.json  vitest.config.ts
sc-rollup-client/: README.md
sc-rollup-client/sc-rollup-evm-client/: .gitignore  hardhat.config.ts  package.json
sc-rollup-client/sc-rollup-evm-client/test/: PhatRollupAnchor.ts
sc-rollup-client/sc-rollup-evm-client/typechain-types/: hardhat.d.ts  index.ts
sc-rollup-client/sc-rollup-evm-client/typechain-types/contracts/: index.ts
sc-rollup-client/sc-rollup-ink5-client/artifacts/: ink_client.contract
sc-rollup-client/sc-rollup-ink5-client/ink_client_example/: Cargo.toml  README.md
sc-rollup-client/sc-rollup-ink5-client/ink_client_lib/tests/: test_utils.rs
sc-rollup-client/sc-rollup-ink5-client/ink_client_lib/traits/: meta_transaction.rs  rollup_client.rs
sc-rollup-client/sc-rollup-ink5-client/integration_tests/: README.md  ink_client.rs
sc-rollup-client/sc-rollup-ink6-client/ink_client_example/: README.md  lib.rs
sc-rollup-client/sc-rollup-ink6-client/ink_client_lib/: README.md
sc-rollup-client/sc-rollup-ink6-client/ink_client_lib/traits/: message_queue.rs
sc-rollup-client/sc-rollup-ink6-client/integration_tests/: README.md
sc-rollup-client/sc-rollup-inkv5-client/: README.md
sc-rollup-client/sc-rollup-inkv5-client/artifacts/: ink_client.contract  ink_client.json  ink_client.wasm
sc-rollup-client/sc-rollup-inkv5-client/ink_client_example/: lib.rs
sc-rollup-client/sc-rollup-inkv5-client/ink_client_lib/: README.md
sc-rollup-client/sc-rollup-inkv5-client/ink_client_lib/tests/: meta_transaction.rs
sc-rollup-client/sc-rollup-inkv5-client/ink_client_lib/traits/: meta_transaction.rs
sc-rollup-client/sc-rollup-inkv5-client/integration_tests/: ink_client.rs
sc-rollup-client/sc-rollup-inkv6-client/: README.md
sc-rollup-client/sc-rollup-inkv6-client/ink_client_example/: Cargo.toml  README.md  lib.rs
sc-rollup-client/sc-rollup-inkv6-client/ink_client_example/artifacts/: ink_client.contract  ink_client.json  ink_client.polkavm
sc-rollup-client/sc-rollup-inkv6-client/ink_client_lib/: Cargo.toml  README.md
sc-rollup-client/sc-rollup-inkv6-client/ink_client_lib/tests/: meta_transaction.rs  test_utils.rs
sc-rollup-client/sc-rollup-inkv6-client/ink_client_lib/traits/: access_control.rs  message_queue.rs  meta_transaction.rs  rollup_client.rs
sc-rollup-client/sc-rollup-inkv6-client/integration_tests/: Cargo.toml  ink_client.rs  lib.rs
sc-rollup-evm-client/evm_client/: hardhat.config.ts
sc-rollup-evm-client/evm_client/contracts/: EvmClient.sol  PhatRollupAnchor.sol
sc-rollup-evm-client/evm_client/test/: PhatRollupAnchor.ts
sc-rollup-evm-client/typechain-types/contracts/: EvmClient.ts  PhatRollupAnchor.ts
sc-rollup-ink5-client/artifacts/: ink_client.contract  ink_client.json  ink_client.wasm
sc-rollup-ink5-client/ink_client/: Cargo.toml  lib.rs
sc-rollup-ink5-client/ink_client_example/: lib.rs
sc-rollup-ink5-client/ink_client_lib/: Cargo.toml
sc-rollup-ink5-client/ink_client_lib/tests/: access_control.rs  kv_store.rs  message_queue.rs  meta_transaction.rs  rollup_client.rs  test_utils.rs
sc-rollup-ink5-client/ink_client_lib/traits/: access_control.rs  kv_store.rs  message_queue.rs  meta_transaction.rs  mod.rs  ownable.rs  rollup_client.rs
sc-rollup-ink5-client/integration_tests/: Cargo.toml  ink_client.rs
sc-rollup-ink5-client/test1/: Cargo.toml  lib.rs
sc-rollup-ink6-client/ink_client/: Cargo.toml  lib.rs
sc-rollup-ink6-client/ink_client_lib/: Cargo.toml
sc-rollup-ink6-client/ink_client_lib/tests/: access_control.rs  kv_store.rs  message_queue.rs  rollup_client.rs
sc-rollup-ink6-client/ink_client_lib/tests/contract/: mod.rs
sc-rollup-ink6-client/ink_client_lib/traits/: access_control.rs  meta_transaction.rs  mod.rs  ownable.rs  rollup_client.rs
sc-rollup-ink6-client/integration_tests/: Cargo.toml  ink_client.rs
test-import/: index.ts  package.json
test-ink-6/: Cargo.toml  lib.rs
(+23 files in other folders)
