[package]
name = "ink6_client"
version = "0.0.1"
authors = ["GuiGou"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }
ink_client_lib = { path = "../ink_client_lib", default-features = false}


[dev-dependencies]
ink_e2e = { version = "6.0.0-alpha" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_client_lib/std",
]
ink-as-dependency = []
e2e-tests = []
