[package]
name = "guess_the_number"
version = "0.1.0"
authors = ["GuiGou"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false }
inkv6_client_lib = { git = "https://github.com/GuiGou12358/sc-rollup", default-features = false}

[dev-dependencies]
ink_e2e = { version = "6.0.0-alpha" }
hex-literal = { version = "1.0.0" }
subxt-signer = { version = "0.42.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "inkv6_client_lib/std",
]
ink-as-dependency = []
e2e-tests = []
