[package]
name = "ink_client"
version = "0.0.1"
authors = ["GuiGou"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink.git", tag = "v6.0.0-alpha.3", default-features = false, features = ["unstable-hostfn"] }
inkv6_client_lib = { path = "../ink_client_lib", default-features = false}

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "inkv6_client_lib/std",
]
ink-as-dependency = []

[package.metadata.ink-lang]
abi = "ink"
