[package]
name = "inkv6_client_lib"
version = "0.0.1"
authors = ["GuiGou"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink.git", tag = "v6.0.0-alpha.4", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
hex-literal = "1.0.0"
subxt-signer = "0.44.0"

[lib]
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
]
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
