[package]
name = "e2e_tests"
version = "0.1.1"
authors = ["guigou"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-beta", default-features = false, features = ["unstable-hostfn"] }
inkv6_client_lib = { path = "../ink_client_lib", default-features = false }
ink_client = { path = "../ink_client_example", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta", default-features = false}
subxt-signer = { version = "0.44.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "inkv6_client_lib/std",
    "ink_client/std",
    "ink_e2e/std",
]
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"