[package]
name = "price_feed_consumer"
version = "0.2.0"
authors = ["GuiGou"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink.git", tag = "v6.0.0-alpha.4", default-features = false, features = ["unstable-hostfn"] }
inkv6_client_lib = { git = "https://github.com/GuiGou12358/sc-rollup", default-features = false}
#inkv6_client_lib = { path = "../../../../sc-rollup-client/sc-rollup-inkv6-client/ink_client_lib", default-features = false}

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink.git", tag = "v6.0.0-alpha.4", default-features = false }
hex-literal = { version = "1.0.0" }
subxt-signer = { version = "0.44.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_e2e/std",
    "inkv6_client_lib/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
