[package]
name = "price_feed_consumer"
version = "0.2.0"
authors = ["GuiGou"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
inkv5_client_lib = { git = "https://github.com/GuiGou12358/sc-rollup", default-features = false}

[dev-dependencies]
ink_e2e = { version = "5.1.1" }
hex-literal = { version = "1.0.0" }
subxt-signer = { version = "0.42.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "inkv5_client_lib/std",
]
ink-as-dependency = []
e2e-tests = []
